--- a/inst/doc/tables.Rnw
+++ b/inst/doc/tables.Rnw
@@ -1,6 +1,12 @@
 \documentclass[12pt]{article}
 \usepackage{Sweave}
 \usepackage{hyperref}
+\usepackage{booktabs}
+\usepackage{longtable}
+
+\usepackage[authoryear,round,comma]{natbib}
+\bibliographystyle{plainnat}
+
 %\VignetteIndexEntry{About the tables package}
 
 \makeatletter
@@ -38,7 +44,8 @@ library(tables)
 tabular( (Species + 1) ~ (n=1) + Format(digits=2)*
          (Sepal.Length + Sepal.Width)*(mean + sd), data=iris )
 @
-You can also pass the output through the \code{Hmisc::latex()} function to produce \LaTeX\ output,
+You can also pass the output through the \code{Hmisc::latex()} function \citep{Hmisc,HmiscLatex}
+to produce \LaTeX\ output,
 which when processed by \code{pdflatex} will produce the following table:
 \begin{center}
 <<echo=FALSE, results=tex>>=
@@ -48,12 +55,33 @@ latex(
 @
 \end{center}
 
+If you prefer the style of table that the \LaTeX\ \pkg{booktabs} package \citep{booktabs}
+produces, you can choose
+that style instead.  I mostly like it, so I have used
+<<eval=FALSE>>=
+booktabs()
+@
+for the rest of this document.  This gives
+\begin{center}
+<<echo=FALSE, results=hide>>=
+save <- table_options()
+booktabs()
+@
+<<irisbook, echo=FALSE, results=tex>>=
+latex(
+<<iris>>
+)
+@
+
+
+\end{center}
+
 The idea of a table in the \pkg{tables} package is a rectangular array of values, with
 each row and column labelled, and possibly with groups of rows and groups of columns
 also labelled.  These arrays are specified by ``table formulas''.
 
 Table formulas are R formula objects, with the  rows of the table
-described before the tilde (\code{"~"}, and the columns after.   Each of
+described before the tilde (\code{"~"}), and the columns after.   Each of
 those is an expression containing \code{"*"}, \code{"+"}, \code{"="}, as
 well as functions, function calls and variables, and parentheses for
 grouping.  There are also various directives included in the formula,
@@ -140,7 +168,8 @@ pseudo-function \code{Heading()} can achieve the same effect, one term at a time
 \end{description}
 
 The value returned is a list-mode matrix corresponding to the entries in the table, 
-with a number of attributes to help with formatting.  See the \code{?tabular} help page.
+with a number of attributes to help with formatting.  See the \code{?tabular} help page
+for more details.
 
 \subsubsection{\code{format(), print(), latex()}}
 \label{sec:formatsyntax}
@@ -149,23 +178,123 @@ with a number of attributes to help with formatting.  See the \code{?tabular} he
 \begin{Sinput}
 format(x, digits=4, justification="n", ...) 
 print(x, ...)
-latex(x, file="", justification="c", ...)
+latex(x, file="", options=NULL,  ...)
 \end{Sinput}
 \end{Schunk}
 
 
-The \code{tables} package provides methods for the \code{format{}}, \code{print{}} and \code{latex()} generics.
+The \code{tables} package provides methods for the \code{format()}, \code{print()} 
+and \code{Hmisc::latex()} generics.
 The arguments are:
 \begin{description}
 \item[x] The tabular object returned from \code{tabular()}.
 \item[digits] The default number of digits to use when formatting.
 \item[justification] The default text justification to use when printing.  For text display, the
 recognized values are \code{"n", "l", "c", "r"}, standing for none, left, center and right
-justification respectively.  For \LaTeX\ any justification string will be accepted; it should be
-one that the \LaTeX\ \verb+\tabular+ environment accepts.
+justification respectively.  For \LaTeX\ the justification is 
+specified via the \code{table_options()} function. 
 \item[file] The default method for the \code{Hmisc::latex()} generic writes the \LaTeX\ code
 to a file; \code{latex.tabular()} can optionally do the same, but it defaults to writing to screen,
 for use in Sweave documents like this one.
+\item[options] A list of options to pass to \code{table_options()}.  These
+will be set only for the duration of the call to \code{latex()}.
+\end{description}
+
+\subsubsection{\code{table\textunderscore options(), booktabs()}}
+\label{sec:booktabs}
+
+The \code{table\textunderscore options()} function sets a number of formatting defaults for the \code{latex()}
+method:
+\begin{description}
+\item[justification] This is the default justification for data columns and their headers.
+Any justification string will be accepted; it should be
+one that the \LaTeX\ \verb+\tabular+ environment (or substitute) accepts.
+\item[rowlabeljustification] This is the default justification for row labels.
+\item[tabular] The environment to use in \LaTeX.  Alternatives to \code{"tabular"} such as
+\code{"longtable"} can be used here.  Those often also need 
+modifications within the table; the \code{Literal()} (section \ref{sec:Literal}) function may be
+helpful.
+\item[toprule, midrule, bottomrule] The \LaTeX\ macros to draw the top, middle and bottom lines
+in the table.  By default these are all \code{"\\hline"}.
+\item[titlerule] An optional \LaTeX\ macro to draw a line under multicolumn titles.
+\item[doBegin, doHeader, doBody, doFooter, doEnd]
+These logical values control the inclusion of specific parts of
+the output table.
+\end{description}
+The defaults are
+<<echo=FALSE>>=
+save
+@
+
+If you are using the \LaTeX\ \pkg{booktabs} package, the \code{booktabs()} function will
+set different options.  Currently those are:
+<<echo=FALSE>>=
+table_options()[c("toprule", "midrule", "bottomrule", "titlerule")]
+@
+
+The earlier table of iris data was produced using
+<<eval=FALSE>>=
+<<irisbook>>
+@
+\begin{center}
+<<results=tex,echo=FALSE>>=
+<<irisbook>>
+@
+\end{center}
+
+
+We can use the \code{doXXXX} options to insert raw \LaTeX\ into a table:
+<<split, eval=FALSE>>=
+latex(tabular(Species ~ (n=1) + Format(digits=2)*
+         (Sepal.Length + Sepal.Width)*(mean + sd), data=iris),
+      options=list(doFooter=FALSE, doEnd=FALSE))
+cat("\\ \\\\ \\multicolumn{6}{l}{
+\\textit{Overall, we see the following: }} \\\\
+\\ \\\\")
+latex(tabular(1 ~ (n=1) + Format(digits=2)*
+         (Sepal.Length + Sepal.Width)*(mean + sd), data=iris),
+      options=list(doBegin=FALSE, doHeader=FALSE))
+@
+\begin{center}
+<<results=tex, echo=FALSE>>=
+<<split>>
+@
+\end{center}
+
+\subsubsection{\code{latexNumeric()}}
+\label{sec:latexNumeric}
+
+\begin{Schunk}
+\begin{Sinput}
+latexNumeric(chars, minus = TRUE, leftpad = TRUE, rightpad=TRUE, 
+                        mathmode = TRUE)
+\end{Sinput}
+\end{Schunk}
+
+The \code{latexNumeric()} function converts character representations of numbers
+into a format suitable for display in \LaTeX\ documents.  There are two goals:
+\begin{itemize}
+\item If \code{chars} is a vector with constant width, then the output will also be constant width.
+This means the default centering used in \code{tabular()} will not misalign decimal points (if
+they were aligned in \code{chars}).
+\item Minus signs will be displayed with the proper symbol rather than a hyphen.
+\end{itemize}
+
+The arguments are:
+\begin{description}
+\item[chars]
+A character vector of formatted numeric values.
+\item[minus]
+Whether to pad positive cases with spacing of the same width as a minus sign.  If \code{TRUE}
+and some entries are negative, then all positive entries will be padded.
+\item[leftpad, rightpad]
+Whether to pad cases that have leading or trailing blanks with spacing matching a digit width per space.
+If \code{leftpad=TRUE}, leading blanks will be converted to spaces the same width as a digit 0.  (If
+\code{minus=TRUE}, one leading blank may have been consumed in the sign padding.)
+The \code{rightpad} argument handles trailing blanks similarly.
+
+\item[mathmode]
+Whether to wrap the result in dollar signs, so \LaTeX\ will render minus signs properly.
 \end{description}
 
 \subsection{Operators}
@@ -190,7 +319,8 @@ latex( tabular(F + 1 ~ 1) )
 Multiplying two expressions means that each
 element of $e_1$ will be applied to each element of $e_2$.  If $e_1$ is 
 a factor, then $e_2$ will be displayed for each element of it.   NB:  $*$ has
-higher precedence than $+$, so the expression $(e_1 + e_2)*(e_3 + e_4)$
+higher precedence than $+$ and evaluation proceeds from left to right.
+The expression $(e_1 + e_2)*(e_3 + e_4)$
 is equivalent to $e_1*e_3 + e_1*e_4 + e_2*e_3 + e_2*e_4$.
 
 Example:
@@ -236,10 +366,13 @@ and the actions depend on the type of the resulting value.
 
 \subsubsection{Closures or other functions}
 
-If the expression is the name of a function, or it evaluates to a function, then that is assumed to
-be the summary statistic to be displayed.  The summary statistic should take a vector of values as input, and return a single 
+If the expression evaluates to a function (e.g. it is the name of a function), then that function
+becomes the summary statistic to be displayed.  The summary statistic should take a vector of values as input, and return a single 
 value (either numeric, character, or some other simple printable value).  If no summary function is specified, the default is
-\code{length}, to count the length of the vector being passed.
+\code{length}, to count the length of the vector being passed.  
+
+Note that only one summary function can be specified for any cell in the table or an error will be
+reported.
 
 Example: \code{mean} and \code{sd} are specified functions; \code{n} is the renamed default statistic.
 \begin{center}
@@ -253,11 +386,12 @@ latex( tabular( (F+1) ~ (n=1) + X*(mean + sd) ) )
 If the expression evaluates to a factor, the dataset is broken up into subgroups according to the levels of the factor.
 Most of the examples above have shown this for the factor \code{F}, but this can also be used to display complete datasets:
 
-Example:  creating a factor to show all data
+Example:  creating a factor to show all data.  Use the \code{identity} function to
+display the values in each cell.
 \begin{center}
 <<results=tex>>=
 latex( tabular( (i = factor(seq_along(X)))  ~ 
-       Heading()*(function(x) x)*(X+A + 
+       Heading()*identity*(X+A + 
               (F = as.character(F) ) ) ) ) 
 @
 \end{center} 
@@ -287,7 +421,7 @@ If the expression evaluates to something other than the above, then it is assume
 to be summarized in the table.  If you would like to summarize a factor or logical vector, wrap it in \code{I()} to prevent
 special handling.
 
-Note that only one value vector can be specified in any term, and all value vectors must be the same length, or an error will be
+Note that only one value vector can be specified for any cell in the table, and all value vectors must be the same length, or an error will be
 reported.
 
 Example:  treating a logical vector as values.
@@ -302,8 +436,12 @@ latex( tabular( I(X > 0) + I(X < 0)
 \label{sec:pseudo}
 
 Several directives to \pkg{tables} may be embedded in the table formula.  This is done using ``pseudo-functions''.  Syntactically
-they look like function calls, but special names are used.  In each case, their action applies to later factors in the term in which they appear.
-For example, \code{X*Justify(r)*(Y + Format(digits=2)*Z) + A} will apply the \code{Justify(r)} directive to both \code{Y} and \code{Z}, but
+they look like function calls, but reserved names are used.  In each case, their action applies to later factors in the term in which they appear.
+For example,
+\begin{center}
+ \code{X*Justify(r)*(Y + Format(digits=2)*Z) + A}
+\end{center} 
+will apply the \code{Justify(r)} directive to both \code{Y} and \code{Z}, but
 the \code{Format(digits=2)} directive will only apply to \code{Z}, and neither will apply to \code{A}.
 
 \subsubsection{\code{Format()}}
@@ -319,7 +457,8 @@ specifying the argument \code{x}.  When \code{tabular()} formats the output it w
 \code{x} from the entries in the table governed by the \code{Format()} specification.
 
 Example:  The mean and standard deviation are both governed by the same format, so
-they are displayed with the same number of decimal places.
+they are displayed with the same number of decimal places, chosen so that the smallest
+values (the means) show two significant digits.
 \begin{center}
 <<results=tex>>=
 latex( tabular( (F+1) ~ (n=1) 
@@ -328,7 +467,8 @@ latex( tabular( (F+1) ~ (n=1)
 \end{center}
 
 For customized formatting, an alternate syntax is to pass a function call to \code{Format()}, rather
-than a list of arguments.  The function should accept an argument named \code{x}, to contain the data.  It should return a character vector
+than a list of arguments.  The function should accept an argument named \code{x} (but as with the
+regular formatting, \code{x} should not be included in the formula), to contain the data.  It should return a character vector
 of the same length as x.
 
 Example:  Use a custom function and \code{sprintf()} to display a standard error in parentheses.
@@ -349,7 +489,7 @@ latex( tabular( Format(fmt(digits=1))*(F+1) ~ X*(mean + stderr) ) )
 
 \subsubsection{\code{.Format()}}
 
-The pseudo-function \code{.Format()} is mainly intended for internal use. It takes a single integer argument, saying that data governed by this call uses the same formatting the format specification
+The pseudo-function \code{.Format()} is mainly intended for internal use. It takes a single integer argument, saying that data governed by this call uses the same formatting as the format specification
 indicated by the integer. In this way entries can be commonly formatted even when they are not contiguous. The integers are assigned sequentially as the format specification is parsed; users will likely need trial and error to find the right value in a complicated table with multiple formats.
 
 Example:  Format two separated columns with the same format.
@@ -395,13 +535,46 @@ latex( tabular( Justify(r)*(F+1) ~ Justify(c)*(n=1)
 \subsection{Formula Functions}
 \label{sec:tableformulas}
 
-Currently only two examples of formula functions are provided, and neither
-is particularly robust.  Users can provide their own as well.  
+Currently several examples of formula functions are provided.   Not all are
+particularly robust; e.g. \code{Hline()} only works for \LaTeX\ output and must be in a
+particular position in the formula.  Users can provide their own as well.  
 Such functions
 should return a language object, which will be substituted into the formula in place of the Formula
 function call.
 
-\subsubsection{\code{Hline(columns)}}
+\subsubsection{\code{All()}}
+
+This function expands all the columns from a dataframe into separate variables in the table.
+It has syntax
+
+\begin{Schunk}
+\begin{Sinput}
+All(df, numeric=TRUE, character=FALSE, logical=FALSE, 
+        factor=FALSE, complex=FALSE, raw=FALSE, other=FALSE)
+\end{Sinput}
+\end{Schunk}
+
+The arguments are
+\begin{description}
+\item[\code{df}] A dataframe or matrix whose columns are to be displayed
+\item[\code{numeric}, \code{character}, \code{logical}, \code{factor}, \code{complex}
+and \code{raw}] Whether to include columns of the corresponding types in the table.
+\item[\code{other}] Whether to include columns that match none of the previous types.
+\end{description}
+
+If functions are given for any of the selection arguments, the columns will be
+transformed according to the specified function before inclusion.  For example,
+using \code{factor=as.character} will convert factors into character vectors in the table.
+
+Example:  Show the means of the numeric columns in the iris data.
+
+\begin{center}
+<<results=tex>>=
+latex( tabular( Species ~ Heading()*mean*All(iris), data=iris) )
+@
+\end{center}
+
+\subsubsection{\code{Hline()}}
 
 This function produces horizontal lines in the table.  It only works for LaTeX output, and
 must be the first factor in a term in the table formula.
@@ -415,18 +588,31 @@ Hline(columns)
 
 The argument is
 \begin{description}
-\item[\code{columns}] An optional specification of which columns should 
-get the line.
+\item[\code{columns}] An optional vector listing which columns should 
+get the line.  
 \end{description}
 
 Example:  
 
 \begin{center}
 <<results = tex>>=
-latex( tabular( Species + Hline()  + 1 ~ (Sepal.Length + Sepal.Width 
-                        + Petal.Length + Petal.Width)*mean, data=iris) )
+latex( tabular( Species + Hline(2:5) + 1 
+                         ~ Heading()*mean*All(iris), data=iris) )
 @
 \end{center}
+
+\subsubsection{\code{Literal()}}
+\label{sec:Literal}
+
+This function inserts literal text as a label.  It has syntax
+
+\begin{Schunk}
+\begin{Sinput}
+Literal(x)
+\end{Sinput}
+\end{Schunk}
+
+The single argument is the text to insert.  It is used by the \code{Hline()} function to insert the text.
 
 \subsubsection{\code{PlusMinus()}}
 
@@ -452,9 +638,85 @@ Example:  Display mean $\pm$ standard error.
 \begin{center}
 <<results=tex>>=
 stderr <- function(x) sd(x)/sqrt(length(x))
-latex( tabular( Justify(l)*(Species+1) ~ (Sepal.Length + Sepal.Width)*
+latex( tabular( (Species+1) ~ All(iris)*
           PlusMinus(mean, stderr, digits=1), data=iris ) )
 @
 \end{center}
+
+\subsubsection{\code{RowFactor()}}
+\label{sec:RowFactor}
+
+This function produces multiple rows the way a factor does, but 
+with more flexibility.  It has syntax
+
+\begin{Schunk}
+\begin{Sinput}
+RowFactor(x, name, spacing=3, space=1, nopagebreak="\\nopagebreak")
+\end{Sinput}
+\end{Schunk}
+
+The arguments are
+\begin{description}
+\item[x] A variable to be treated as a factor.
+\item[name] The name to be used for the factor; by default, the name passed as \code{f}.
+\item[spacing] Extra spacing is added after every group of \code{spacing} lines.
+\item[space] How much extra space to add (in ``ex'' units).
+\item[nopagebreak] Macro to insert to suppress page breaks except between groups.
+\end{description}
+
+Example: Show the first 50 lines of the iris dataset, in groups of 5 lines.  Use
+the \code{"longtable"} environment to allow this to cross page boundaries.  The
+\code{midrule} setting is necessary to get the headings to repeat on subsequent pages.  
+I've used the one that is compatible with the \pkg{booktabs} style; if you want the
+default style, use \verb!midrule="\\hline\\endhead\\hline\\endfoot"! instead.
+
+<<results=tex>>=
+subset <- 1:50
+latex( tabular( RowFactor(subset, "$i$", spacing=5)  ~ 
+       All(iris[subset,], factor=as.character)*Heading()*identity ),
+       options = list(tabular="longtable",
+                      midrule="\\midrule\\endhead\\hline\\endfoot") )
+@
+
+\section{Technical Details}
+
+\subsection{Formatting}
+\label{sec:formatdetails}
+
+As mentioned in \ref{sec:formats}, formatting in \pkg{tables} depends on the standard \code{format()}
+function or other user-selected functions.  Here are the details of how it is done.
+
+The \code{format.tabular()} method does the first part of the work.  It constructs the calls
+to the appropriate formatting functions and uses them to format all of the entries in the table.
+This converts the \code{tabular} object to a character array.
+
+The procedure goes as follows:
+\begin{enumerate}
+\item Entries in the table without specified formatting are formatted first, separately
+by column using the \code{format()} function.  This is so that entries in a given column will end up
+with the same character width and (with the default settings) with the same number of decimal places.
+
+\item Entries in the table with specified formatting are grouped according to the format specification.
+For example, if two columns both share the same \code{Format()}, they will be formatted in
+a single call.  This results in such entries ending up
+with the same character width and (with the default settings) with the same number of decimal places.
+
+\item If the \code{latex} argument is \code{TRUE},
+any numeric entries are passed to the \code{latexNumeric()} function (see \ref{sec:latexNumeric}), which replaces blanks and
+minus signs with fixed width spaces and \LaTeX\ minus signs 
+so that all entries will display in the same width.  This means that numeric values will
+normally have decimal points aligned, unless the formatting function explicitly removes
+leading spaces.  
+
+\item If the \code{latex} argument is \code{FALSE}, 
+an attempt is made to justify the results using simple ASCII spacing, according to the \code{Justify()}
+specification with the \code{justification} argument used as a default.
+\end{enumerate}
+
+\section*{Acknowledgments}
+
+I gratefully acknowledge helpful suggestions and hints from Rich Heiberger and Frank Harrell.
+
+\bibliography{tables}
 
 \end{document}
