--- a/inst/NEWS
+++ b/inst/NEWS
@@ -63,3 +63,25 @@
       Added cbind() and rbind() methods for tabular objects.
       The internal texify() function did not work properly.
       
+0.7.67:
+      The cbind() and rbind() methods now allow NULL in the list
+      of arguments.  (Suggestion of Jeff Newmiller.)
+      Added a note in the vignette about how to use RowFactor with
+      nopagebreak in a longtable environment. (Based on some sleuthing
+      by Jeffrey Miller.)
+      Added HTMLcaption to the table options to insert an HTML caption.
+      (Suggestion of Joseph Larmarange.)
+      
+0.7.68:
+      Bug fix in setting up column headings (reported by Lars Bishop).
+      
+0.7.79:
+      Added Equal() and Unequal() pseudo-functions for more flexible
+      Percent() calculations.
+      Fixed bug in handling factors which had not excluded NA values.
+      Added "formula" attribute to tabular.formula results.
+      Added as.tabular() function.
+      Added Arguments() function to allow multi-argument analysis
+      functions.
+      
+      
